# RenkoPlayer

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
docs/dev_logs/: 2025-11-27_environment_setup_and_troubleshooting.md  2025-11-30_qt_deployment_and_policy_fixes.md  2025-12-09_qml_custom_module_setup.md  2025-12-17_process_slider_accurate_seek.md  2025-12-26_fix_3d_render_and_rtsp_timeout.md  README.md
docs/setup/: README.md  deploy_release.md  prerequisites.md
docs/setup_logs/: install_windows.md
libs/RenkoUI/: CMakeLists.txt
libs/RenkoUI/qml/: RButton.qml  RCheckBox.qml  RComboBox.qml  RDialog.qml  RFileDialog.qml  RLabel.qml  RMenu.qml  RMenuBar.qml  RMenuItem.qml  RMessageDialog.qml  RPanel.qml  RProgressBar.qml  RScrollBar.qml  RSlider.qml  RSwitch.qml  RTextField.qml  RToolButton.qml  RWindow.qml  Theme.qml
libs/RenkoUI/src/: FileSystemHelper.cpp  FileSystemHelper.h
qml/: main.qml
qml/RenkoPlayer/: qmldir
qml/RenkoUI/: RButton.qml  RDialog.qml  RFileDialog.qml  RMenuItem.qml  RMessageDialog.qml  RPanel.qml  RProgressBar.qml  RScrollBar.qml  RToolButton.qml  Theme.qml
src/: main.cpp
src/core/: VideoDecoder.cpp  VideoDecoder.h
src/player/: VideoDecoder.cpp  VideoDecoder.h
src/qml/: main.qml
src/resources/qml/: main.qml
src/ui/: PanoramaRenderItem.cpp  PanoramaRenderItem.h  VideoRenderItem.cpp  VideoRenderItem.h
